--- a/src/FRONTEND/meetview-client/package.json
+++ b/src/FRONTEND/meetview-client/package.json
@@ -6,11 +6,13 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "clsx": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
