Add: Redis-related files

--- a/src/BACKEND/chatting/pom.xml
+++ b/src/BACKEND/chatting/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>guava</artifactId>
             <version>27.0.1-jre</version>
         </dependency>
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
     </dependencies>
 
