--- a/src/BACKEND/chatting/src/main/resources/application.properties
+++ b/src/BACKEND/chatting/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# redis setting
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=2
 
