--- a/src/FRONTEND/meetview-client/package.json
+++ b/src/FRONTEND/meetview-client/package.json
@@ -7,12 +7,14 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
     "axios": "^0.19.0",
+    "clsx": "latest",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "clsx": "latest"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
