--- a/src/FRONTEND/meetview-client/package.json
+++ b/src/FRONTEND/meetview-client/package.json
@@ -41,6 +41,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "json-fetch": "^8.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
@@ -56,7 +57,9 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-infinite-scroll-component": "^4.5.2",
     "react-router-dom": "^5.0.1",
+    "react-stomp": "^4.1.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
@@ -74,6 +77,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
