--- a/src/BACKEND/chatting/src/main/resources/application.properties
+++ b/src/BACKEND/chatting/src/main/resources/application.properties
@@ -4,4 +4,11 @@ spring.redis.port=6379
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=2
-
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
