--- a/src/BACKEND/chatting/src/main/resources/application.properties
+++ b/src/BACKEND/chatting/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+# Path to save file(stores files uploaded via REST API)
+storage.location=./storage
+
+chatting.topic = kafka-chatting
+
