--- a/src/FRONTEND/meetview-client/package.json
+++ b/src/FRONTEND/meetview-client/package.json
@@ -45,6 +45,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
+    "mobx-react-lite": "^1.4.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -57,7 +58,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
-    "react-infinite-scroll-component": "^4.5.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "react-stomp": "^4.1.1",
     "resolve": "1.10.0",
